[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-orchestrator"
version = "0.2.0"
description = "LLM orchestration library with routing, fallback, retries, and caching."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "llm_orchestrator contributors" },
]
keywords = ["llm", "orchestration", "routing", "fallback", "cache", "observability", "multi-provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
]


[project.scripts]
llm-orchestrator-init = "llm_orchestrator.cli:main"
[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
all = [
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
include-package-data = true
packages = [
    "llm_orchestrator",
    "llm_orchestrator.cache",
    "llm_orchestrator.config",
    "llm_orchestrator.core",
    "llm_orchestrator.fallbacks",
    "llm_orchestrator.models",
    "llm_orchestrator.monitoring",
    "llm_orchestrator.routing",
    "llm_orchestrator.utils",
]

[tool.setuptools.package-dir]
"llm_orchestrator" = "."
"llm_orchestrator.cache" = "cache"
"llm_orchestrator.config" = "config"
"llm_orchestrator.core" = "core"
"llm_orchestrator.fallbacks" = "fallbacks"
"llm_orchestrator.models" = "models"
"llm_orchestrator.monitoring" = "monitoring"
"llm_orchestrator.routing" = "routing"
"llm_orchestrator.utils" = "utils"

[tool.setuptools.package-data]
"llm_orchestrator" = ["orchestrator.yaml"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
